--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,12 @@
 html,
 body {
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     color: white;
     background: rgb(20, 20, 20);
+
 }
 
 a {
