--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,10 +3,12 @@ body {
   padding: 0;
   margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    color: white;
-    background: rgb(20, 20, 20);
+  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: white;
+  background: rgb(20, 20, 20);
 
+  --font-size-title: 48px;
+  --font-size-p: 20px
 }
 
 a {
