--- a/components/profile/ProfileForm.module.css
+++ b/components/profile/ProfileForm.module.css
@@ -1,22 +1,18 @@
-.loginForm {
+.profileForm {
   width: 70%;
   margin: 0 auto;
   padding-top: 40px;
 }
 
-.loginForm h1 {
+.profileForm h1 {
   text-align: center;
   font-size: var(--font-size-title);
 }
 
-.loginForm p {
+.profileForm p {
   text-align: center;
   margin-top: 32px;
-  font-size: var(--font-size-p);
-}
-
-.loginForm p span {
-  border-bottom: 1px solid white;
+  font-size: 16px;
 }
 
 .btnDiv {
